[package]
name = "p2p_tic_tac_toe_rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.50.0", features = ["ping", "async-std", "dns", "tcp", "websocket", "noise", "mplex", "yamux"]}
futures = {version = "0.3.25", features = ["executor", "thread-pool"]}
async-std = {version = "1.12.0", features = ["attributes"]}
serde = {version = "1.0", features = ["derive"]}
rand = "0.8.5"
